Cambios calificaciones y asistencias

--- a/src/main/resources/templates/curso/fragmentos.html
+++ b/src/main/resources/templates/curso/fragmentos.html
@@ -214,7 +214,7 @@
                                     <option th:each="curso : ${cursos}" th:value="${curso.id}" th:text="${curso.nombre}"></option>
                                 </select>
 
-                                <button type="submit" class="btn btn-primary mt-2">Calificar</button>
+                                <a href="/calificaciones/list" class="btn btn-primary mt-2">Calificar</a>
                                 <a href="/asistencia/curso" class="btn btn-primary mt-2">Asistencia</a>
                             </div>
 
