--- a/src/main/resources/templates/asistencia/estudiantes.html
+++ b/src/main/resources/templates/asistencia/estudiantes.html
@@ -2,6 +2,81 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+
+    <head th:replace="~{layout/plantilla2 :: head}">
+        <title>Pasar Asistencia</title>
+    </head>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Obtén la fecha actual
+            const today = new Date();
+
+            // Formatea la fecha en 'YYYY-MM-DD' para el valor del input
+            const formattedDate = today.toISOString().split('T')[0];
+
+            // Asigna la fecha formateada al campo de fecha
+            document.getElementById('fecha').value = formattedDate;
+        });
+    </script>
+
+    <body>
+        <header th:replace="layout/plantilla2 :: header"></header>
+        <section class="container py-4">
+            <div class="card">
+                <div class="card-header">
+                    <h4>Pasar Asistencia para Curso: <span th:text="${cursoNombre}"></span></h4>
+                    <p th:text="'Número de estudiantes: ' + ${#lists.size(estudiantes)}"></p>
+                </div>
+                <div class="container py-4">
+                    <div class="row">
+                        <div class="col-md-3 d-grid">
+                            <a th:href="@{/asistencia/curso}" class="btn btn-primary">
+                                <i class="fas fa-arrow-left"></i> Regresar
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <form th:action="@{/asistencia/registrar}" method="post">
+                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                                <input type="hidden" name="cursoId" th:value="${cursoId}" />
+                                <div class="form-group">
+                                    <label for="fecha">Fecha</label>
+                                    <input type="date" id="fecha" name="fecha" class="form-control" required/>
+                                </div>
+                                <table class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Nombre</th>
+                                            <th>Asistió</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr th:each="estudiante, iter : ${estudiantes}">
+                                            <input type="hidden" name="matriculaId" th:value="${estudiante.matriculas[0].id}" />
+                                            <td>
+                                                <label th:text="${estudiante.persona.nombre} + ' ' + ${estudiante.persona.apellido1} + ' ' + ${estudiante.persona.apellido2}"></label>
+                                            </td>
+                                            <td class="checkbox-cell">
+                                                <input type="checkbox" th:name="'asistio' + ${estudiante.matriculas[0].id}" />
+                                                <label class="checkbox-label">Asistió</label>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <button type="submit" class="btn btn-primary">Registrar Asistencia</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
+</html>
+
+<!--<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head>
         <title>Pasar Asistencia</title>
         <head th:replace="~{layout/plantilla2 :: head}">
@@ -30,12 +105,12 @@
                     <div class="container py-4">
                         <div class="row">
                             <div class="col-md-3 d-grid">
-                                <a th:href="@{/asistencia/curso}" class="btn btn-primary">
+                                <a th:href="@{/asitencia/curso}" class="btn btn-primary">
                                     <i class="fas fa-arrow-left"></i> Regresar
                                 </a>
                             </div>
                             <div class="card-body">
-                                <form action="/asistencia/registrar" method="post">
+                                <form th:action="/asistencia/registrar" method="post">
                                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                                     <input type="hidden" name="cursoId" th:value="${cursoId}" />
                                     <div class="form-group">
@@ -73,4 +148,4 @@
                 </div>
             </section>
         </body>
-</html>
+</html>-->
